# CCSpeaks

./: .rustfmt.toml  Cargo.toml  README.md  demo.lua  espeak.patch  flake.nix
src/: audio.rs  main.rs  monitoring.rs  speak.rs
