[package]
name = "cc-speaks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
espeakng-sys = "0.1.1"
form_urlencoded = "1.1.0"
hyper = { version = "0.14.23", features = [ "http1", "server", "tcp"] }
listenfd = "1.0.0"
log = "0.4.17"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-http = "0.7.0"
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
parking_lot = "0.12.1"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
